Fixed navbar links showing as blue on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -793,7 +793,6 @@ a.session-box:hover {
 .navbar-default .navbar-nav > li > a:visited {
   color: #fff;
 }
-.navbar-default .navbar-nav > li > a,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   -webkit-transition: all 0.6s;
